--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@yume-chan/adb-credential-web": "^0.0.17",
+    "@yume-chan/stream-extra": "^0.0.17",
+    "mobx": "^6.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
