--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,6 +24,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: $CI = false
+        
+    - name: Set env
+      run: echo "CI=false" >> $GITHUB_ENV
+      
     - run: npm install .
     - run: npm run build --if-present
