--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
+name: Build and Deploy
 
 on:
   push:
@@ -42,3 +39,18 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: ${{ github.ref }}
+        
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+    - name: Clone both the Robot Controller repo and this
+      run: |
+        git clone https://github.com/XaverianTeamRobotics/FtcRobotController.git
+        git clone https://github.com/XaverianTeamRobotics/webinstaller.git
+    - name: Transfer site contents
+      run: |
+        rm -rf ./FtcRobotController/HelpPage/apk/*
+        cp ./webinstaller/build/* ./FtcRobotController/HelpPage/apk
+    - run: ls -laR ./FtcRobotController/HelpPage/apk
