--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add -f ./build/*
-        git commit -m "Build Site" ./build/*
+        git commit --allow-empty -m "Build Site" ./build/*
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
