--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,3 +54,13 @@ jobs:
         rm -rf ./FtcRobotController/HelpPage/apk/*
         cp -r ./webinstaller/build/* ./FtcRobotController/HelpPage/apk
     - run: ls -laR ./FtcRobotController/HelpPage/apk
+    - name: Commit Changes
+      run: |
+        cd FtcRobotController
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git add -f ./HelpPage/apk/*
+        git commit --allow-empty -m "Build Site" ./HelpPage/apk/*
+    
+    - name: Push changes
+      run: git push https://XaverianTeamRobotics:${{ secrets.GITHUB_TOKEN }}@github.com/scuzzlebuzzle/XaverianTeamRobotics.git
