--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -62,8 +62,7 @@ jobs:
         git add -f ./HelpPage/apk/*
         git commit --allow-empty -m "Copy Site" ./HelpPage/apk/*
     
-    - run: pwd
-    
     - name: Push changes
       run: |
+        cd FtcRobotController
         git push
