--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -65,4 +65,6 @@ jobs:
     - name: Push changes
       run: |
         cd FtcRobotController
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         git push
