--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -65,6 +65,7 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
+        directory: 'FtcRobotController'
         github_token: ${{ secrets.PERSONAL_TOKEN }}
         branch: master
         repository: "https://github.com/XaverianTeamRobotics/FtcRobotController"
