--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -68,4 +68,4 @@ jobs:
         directory: 'FtcRobotController'
         github_token: ${{ secrets.PERSONAL_TOKEN }}
         branch: master
-        repository: "https://github.com/XaverianTeamRobotics/FtcRobotController"
+        repository: "XaverianTeamRobotics/FtcRobotController"
