--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build site
 
 on:
   push:
@@ -6,7 +6,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -21,51 +20,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        
+
     - name: Set env
       run: echo "CI=false" >> $GITHUB_ENV
-      
+
     - run: npm install .
     - run: npm run build --if-present
-    - run: ls -laR ./build
-    - name: Commit files
-      run: |
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git add -f ./build/*
-        git commit --allow-empty -m "Build Site" ./build/*
-    - name: Push changes
-      uses: ad-m/github-push-action@master
+    - name: Upload build
+      uses: actions/upload-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
-        
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Clone both the Robot Controller repo and this
-      run: |
-        git clone https://github.com/XaverianTeamRobotics/FtcRobotController.git
-        git clone https://github.com/XaverianTeamRobotics/webinstaller.git
-    - name: Transfer site contents
-      run: |
-        rm -rf ./FtcRobotController/HelpPage/apk/*
-        cp -r ./webinstaller/build/* ./FtcRobotController/HelpPage/apk
-    - run: ls -laR ./FtcRobotController/HelpPage/apk
-    - name: Commit Changes
-      run: |
-        cd FtcRobotController
-        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git add -f ./HelpPage/apk/*
-        git commit --allow-empty -m "Copy Site" ./HelpPage/apk/*
-    
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        directory: 'FtcRobotController'
-        github_token: ${{ secrets.PERSONAL_TOKEN }}
-        branch: master
-        repository: "XaverianTeamRobotics/FtcRobotController"
+        name: build
+        path: build/
