--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@yume-chan/adb-backend-webusb": "^0.0.19",
+    "@yume-chan/adb-credential-web": "^0.0.21",
+    "@yume-chan/stream-extra": "^0.0.21",
+    "mobx": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^3.5.0",
-    "@yume-chan/adb-credential-web": "^0.0.21",
-    "@yume-chan/stream-extra": "^0.0.21",
-    "@yume-chan/adb-backend-webusb": "^0.0.19",
-    "mobx": "^6.12.0"
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@yume-chan/adb-credential-web": "^0.0.21",
     "@yume-chan/stream-extra": "^0.0.21",
     "mobx": "^6.12.0"
