--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@yume-chan/adb": "^0.0.21",
     "@yume-chan/adb-backend-webusb": "^0.0.19",
     "@yume-chan/adb-credential-web": "^0.0.21",
-    "@yume-chan/stream-extra": "^0.0.21",
+    "@yume-chan/adb-daemon-webusb": "^0.0.21",
     "mobx": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,5 +51,5 @@
     "@yume-chan/stream-extra": "^0.0.21",
     "mobx": "^6.12.0"
   },
-  "homepage": "/apk"
+  "homepage": "/webinstaller"
 }
